# anilist-mal-sync-v2

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  anilist-mal-sync.xml  config.example.yaml  docker-compose.yml  install.py  pyproject.toml  unraid-template.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docker-publish.yml
src/anilist_mal_sync/: __init__.py  anilist_client.py  base_client.py  cli.py  config.py  constants.py  healthcheck.py  mal_client.py  models.py  oauth.py  sync_engine.py  sync_service.py  web.py
tests/: test_models.py
